[package]
name = "tokio-rayon"
version = "2.1.1-dev"
authors = ["Andy Barron <andrewlbarron@gmail.com>"]
edition = "2018"
description = "Mix async code with CPU-heavy thread pools using Tokio + Rayon"
license = "MIT"
readme = "README.md"
repository = "https://github.com/andybarron/tokio-rayon"
keywords = ["tokio", "rayon", "async", "thread-pool"]
categories = ["asynchronous", "concurrency", "rust-patterns"]

[dependencies]
num_cpus = "1"
tokio = { version = "1", default-features = false, features = ["sync"] }
rayon = "1"

[dev-dependencies]
tokio-test = "0.4.1"

[dev-dependencies.tokio]
version = "1"
default-features = false
features = ["sync", "macros", "rt", "time", "rt-multi-thread"]
